# vibecoded

./: .dockerignore  .editorconfig  .gitignore  .npmrc  .prettierignore  BUILDING.md  CLAUDE.md  CODING_GUIDELINES.md  CONCEPT.md  DEPLOYMENT.md  README.md  TASKS.md  commitlint.config.js  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/: copilot-instructions.md
apps/server-py/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
apps/server-py/app/api/: deps.py  init_app.py  main.py
apps/server-py/app/api/endpoints/: __init__.py  analytics.py  auth.py  comparisons.py  family_members.py  favourites.py  health.py  me.py  scanner.py  scans.py  storage.py
apps/server-py/app/core/config/: api.py  base.py  gcs.py  jwt.py  langsmith.py  oauth.py  openai.py  postgres.py  revenuecat.py  security.py  settings.py
apps/server-py/app/core/exc/: base.py
apps/server-py/app/db/: postgres.py
apps/server-py/app/domain/product_facts/: build_product_facts.py  diet_utils.py  nutrition_utils.py  product_type_utils.py  prompts.py  schema.py
apps/server-py/app/domain/product_normalization/: normalize_openfoodfacts.py
apps/server-py/app/domain/score_engine/: compute_score.py
apps/server-py/app/enums/: __init__.py  base.py
apps/server-py/app/models/: __init__.py  base.py  comparison.py  family_member.py  favorite.py  product.py  product_ingredient_cache.py  scan.py  user.py  user_identity.py  user_profile.py
apps/server-py/app/repositories/: __init__.py  base.py  comparison.py  family_member.py  favorite.py  product.py  product_ingredient_cache.py  scan.py  user.py  user_identity.py  user_profile.py
apps/server-py/app/schemas/: auth.py  comparisons.py  family_members.py  favourites.py  scanner.py  scans.py  user.py
apps/server-py/app/schemas/utils/: paginator.py
apps/server-py/app/services/: analysis_jobs.py  auth_service.py  comparisons_service.py  family_members_service.py  favourites_service.py  ingredient_analysis_ai.py  nutrition_websearch.py  openfoodfacts.py  photo_identification.py  product_facts_ai.py  product_vector_search.py  scanner_service.py  scans_service.py  storage.py  user_service.py
apps/server-py/app/utils/: apple_auth.py  google_auth.py  paginator.py  security.py  token_service.py  unitofwork.py
apps/server-py/migrations/: env.py
apps/server-py/migrations/versions/: 0001_initial_schema.py
brand/: preview.html
docs/: BRANDING.md  FASTAPI_MIGRATION.md  MIGRATION_PLAN.md  REVENUECAT_SETUP_GUIDE.md  (+4 more)
(+688 files in other folders)
