[project]
name = "server-py"
version = "0.1.0"
description = "Yuka backend — FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.12.0",
    "argon2-cffi>=25.1.0",
    "google-auth>=2.49.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=2.30.0",
    "pgvector>=0.3.0",
    "google-cloud-storage>=2.19.0",
    "pillow>=12.1.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
