[project]
name = "server-py"
version = "0.1.0"
description = "Yuka backend — FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyjwt>=2.12.0",
    "argon2-cffi>=25.1.0",
    "google-auth>=2.49.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=2.30.0",
    "pgvector>=0.3.0",
    "google-cloud-storage>=2.19.0",
    "pillow>=12.1.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "cryptography>=44.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.8",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    "__pycache__",
    ".env",
    ".env.example",
    "venv",
    ".idea",
    "migrations/",
    "__init__.py",
]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W"]
ignore = ["E501", "E712", "B904", "C408", "F841", "B008", "C901"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
